tests/fixtures/negative/exceptions/ExceptionRaisedInUnexpectedLocation.java
package test;

class Value {
  int compute() {
    throw new UnsupportedOperationException("not implemented");
  }
}
